# devil

./: Cargo.toml  README.md
.cargo/: config.toml
cli/src/: main.rs
devil_derive/: Cargo.toml
devil_derive/src/: lib.rs
doberman_derive/: Cargo.toml
examples/: cel.toml  control_flow.toml  graphql.toml  http.toml  http2.toml  http_simple.courier  local.toml  parallel.toml  pause.toml  sync.toml  tcp.toml  tcp_simple.courier  test.toml  tls.toml
ql/: Cargo.toml
ql/src/: error.rs  http.rs  lib.rs  plan.rs  step.rs  tcp.rs
ql/src/exec/: http.rs  mod.rs  tcp.rs
scripts/: run.sh
src/: bindings.rs  cel_functions.rs  defaults.rs  error.rs  implicit_defaults.cp.toml  lib.rs  main.rs  output.rs  plan.rs  record.rs
src/bindings/: location.rs  mod.rs  pause.rs  raw_http2.rs  signal.rs
src/exec/: buffer.rs  extract.rs  graphql.rs  http.rs  http1.rs  http2.rs  http2frames.rs  mod.rs  pause.rs  raw_http2.rs  raw_tcp.rs  runner.rs  sync.rs  tcp.rs  tcp_common.rs  tcpsegments.rs  tee.rs  timing.rs  tls.rs
src/output/: bytes.rs  graphql.rs  http.rs  http1.rs  http2.rs  mod.rs  name.rs  normalize.rs  raw_http2.rs  raw_tcp.rs  tcp.rs  tls.rs  value.rs
src/plan/: graphql.rs  http.rs  http1.rs  http2.rs  http3.rs  location.rs  mod.rs  quic.rs  raw_http2.rs  raw_tcp.rs  tcp.rs  tls.rs  udp.rs
