[package]
name = "courier_qe"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1.3"
#hyper = { version = "=1.0.0-rc.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
#http-body-util = "0.1.0"
#hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
bytes = "1"
futures = "0.3.26"
toml = { version = "0.8.6", features = ["preserve_order", "indexmap"] }
serde = { version = "1.0.190", features = ["serde_derive"] }
indexmap = { version = "2.1.0", features = ["serde"] }
cel-interpreter = "0.5.0"
frunk = { version = "0.4.2", features = ["serde"] }
frunk_core = "0.4.2"
serde_json = { version = "1.0.108", features = ["indexmap", "arbitrary_precision", "preserve_order", "unbounded_depth"] }
rustls = "0.21.8"
tokio-rustls = "0.24.1"
webpki-roots = "=0.26.0-alpha.1"
clap = { version = "4.4.8", features = ["derive"] }
chrono = { version = "0.4.31" }
url = { version = "2.4.1", features = ["serde"] }
go-parse-duration = "0.1.1"
base64 = "0.21.5"
itertools = "0.12.0"
httparse = "1.8.0"
async-trait = "0.1.74"
scopeguard = "1.2.0"
