[package]
name = "devil"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1.3"
#hyper = { version = "=1.0.0-rc.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
#http-body-util = "0.1.0"
#hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
bytes = "1"
futures = "0.3.26"
toml = { version = "0.8.6", features = ["preserve_order", "indexmap"] }
serde = { version = "1.0.190", features = ["serde_derive"] }
indexmap = { version = "2.1.0", features = ["serde"] }
cel-interpreter = { path = "../cel-rust/interpreter" }
frunk = { version = "0.4.2", features = ["serde"] }
frunk_core = "0.4.2"
serde_json = { version = "1.0.108", features = ["indexmap", "arbitrary_precision", "preserve_order", "unbounded_depth"] }
rustls = "0.22.1"
tokio-rustls = "0.25.0"
webpki-roots = "=0.26.0"
clap = { version = "4.4.8", features = ["derive"] }
chrono = { version = "0.4.31" }
url = { version = "2.4.1", features = ["serde"] }
go-parse-duration = "0.1.1"
base64 = "0.21.5"
itertools = "0.12.0"
httparse = "1.8.0"
async-trait = "0.1.74"
form_urlencoded = "1.2.1"
rand = "0.8.5"
scopeguard = "1.2.0"
atoi = "2.0.0"
sprintf = "0.1.4"
