[package]
name = "devil"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1.3"
#hyper = { version = "=1.0.0-rc.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
#http-body-util = "0.1.0"
#hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
bytes = { version = "1", features = ["serde"] }
futures = "0.3.26"
toml = { version = "0.8.6", features = ["preserve_order", "indexmap"] }
serde = { version = "1.0.190", features = ["rc", "serde_derive"] }
indexmap = { version = "2.1.0", features = ["serde"] }
cel-interpreter = { git = "https://github.com/fore5fire/cel-rust", branch = "serde-datetime", features = ["json", "chrono"] }
frunk = { version = "0.4.2", features = ["serde"] }
frunk_core = "0.4.2"
serde_json = { version = "1.0.129", features = ["indexmap", "arbitrary_precision", "preserve_order", "unbounded_depth"] }
rustls = "0.22.1"
tokio-rustls = "0.25.0"
webpki-roots = "=0.26.0"
clap = { version = "4.4.8", features = ["derive"] }
chrono = "0.4.31" 
url = { version = "2.4.1", features = ["serde"] }
go-parse-duration = "0.1.1"
base64 = "0.21.5"
itertools = "0.12.0"
httparse = "1.8.0"
async-trait = "0.1.74"
form_urlencoded = "1.2.1"
rand = "0.8.5"
scopeguard = "1.2.0"
atoi = "2.0.0"
sprintf = "0.1.4"
h2 = "0.4.2"
http = "1.0.0"
tokio-task-pool = "0.1.5"
pnet = "0.34.0"
anyhow = { version = "1.0.86", features = ["backtrace"] }
tokio-util = "0.7.11"
regex = "1.10.6"
thiserror = "1.0.63"
derivative = "2.2.0"
http-box = "0.1.6"
byteorder = "1.5.0"
bitmask-enum = "2.2.4"
toml_edit = { version = "0.22.21", features = ["serde"] }
macro_rules_attribute = "0.2.0"
tracing = { version = "0.1.40", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
strum = { version = "0.26.3", features = ["derive"] }
serde-transcode = "1.1.1"
gcp-bigquery-client = "0.23.0"
prost = "0.13.3"
serde-hashkey = "0.4.5"
serde_bytes = "0.11.15"
