[package]
name = "courier_ql"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1.3"
hyper = { version = "=1.0.0-rc.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2"
bytes = "1"
futures = "0.3.26"
hyper-util = "0.0.0"
toml = { version = "0.8.6", features = ["preserve_order", "indexmap"] }
serde = { version = "1.0.190", features = ["serde_derive"] }
indexmap = "2.1.0"
cel-interpreter = "0.4.1"
frunk = { version = "0.4.2", features = ["serde"] }
frunk_core = "0.4.2"

